--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 header {
     display: flex;
     justify-content: space-between;
-    width: 1000px;
+    max-width: 1000px;
     margin: 0 auto;
     margin-top: 75px;
     font-family: lato;
@@ -33,7 +33,7 @@ section {
     margin-bottom: 200px;
 }
 .first-section-div {
-     width: 1000px;
+     max-width: 1000px;
      display: flex;
      justify-content: space-between;
      margin: 0 auto;
@@ -96,7 +96,7 @@ h1 {
 }
 
 .second-div {
-    width: 1000px;
+    max-width: 1000px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
@@ -231,7 +231,7 @@ h1 {
 
 
 .first-line {
-    width: 1000px;
+    max-width: 1000px;
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
