--- a/css/responsive.css
+++ b/css/responsive.css
@@ -77,6 +77,11 @@
         flex-direction: column;
     }
     .right-div {
-        margin-top: 30px;
+        margin-top: 100px;
+        margin: 0 auto;
     }
+    .left-div {
+        margin: 0 auto;
+        margin-bottom: 50px;
+    } 
 }
