--- a/css/styles.css
+++ b/css/styles.css
@@ -206,26 +206,29 @@ h1 {
     height: 40px;
     border-radius: 30px;
     background-color: transparent;
+    color: white;
     display: flex;
     justify-content: space-evenly;
     border-color: white;
     border: 2px solid white;
+    text-align: center;
 
 }
 
 .button-div:hover  {
     background-color: white;
+    color: black;
+    text-align: center;
     
 }
-.button-block:hover {
-    color: black;
-}
+
+
 
 .button-block {
     text-align: center;
-    color: white;
+   
     margin: auto;
-}
+} 
 
 
 .first-line {
